# halo2-lib

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  help.html  index.html  make_docs.sh  rust-toolchain  rustfmt.toml  search-index.js  settings.html  source-files.js
halo2-base/: Cargo.toml  LICENSE  README.md  build.rs
halo2-base/benches/: inner_product.rs  mul.rs
halo2-base/example/: inner_product.rs
halo2-base/examples/: inner_product.rs
halo2-base/params/: kzg_bn254_6.srs
halo2-base/proptest-regressions/gates/tests/: prop_test.txt
halo2-base/src/: instrument.rs  lib.rs  utils.rs
halo2-base/src/gates/: builder.rs  flex_gate.rs  mod.rs  range.rs  tests.rs
halo2-base/src/gates/builder/: mod.rs  parallelize.rs
halo2-base/src/gates/circuit/: builder.rs  mod.rs
halo2-base/src/gates/flex_gate/: mod.rs
halo2-base/src/gates/range/: mod.rs
halo2-base/src/gates/tests/: README.md  bitwise_rotate.rs  flex_gate.rs  flex_gate_test.rs  flex_gate_tests.rs  general.rs  idx_to_indicator.rs  mod.rs  neg_prop.rs  neg_prop_tests.rs  pos_prop.rs  pos_prop_test.rs  pos_prop_tests.rs  prop_test.rs  range.rs  range_gate.rs  range_gate_test.rs  range_gate_tests.rs  test_ground_truths.rs  utils.rs  z3.rs
halo2-base/src/poseidon/: mds.rs  mod.rs  spec.rs  state.rs  tests.rs
halo2-base/src/poseidon/hasher/: mds.rs  mod.rs  spec.rs  state.rs
halo2-base/src/poseidon/tests/: compatibility.rs  mod.rs
halo2-base/src/safe_types/: bytes.rs  mod.rs  primitives.rs  tests.rs
halo2-base/src/safe_types/tests/: bytes.rs  mod.rs  safe_type.rs  var_byte_array.rs
halo2-base/src/utils/: halo2.rs  mod.rs  testing.rs
halo2-base/src/virtual_region/: copy_constraints.rs  lookups.rs  manager.rs  mod.rs
halo2-base/src/virtual_region/lookups/: basic.rs
halo2-base/src/virtual_region/tests/: mod.rs
halo2-base/tests/: bitwise_rotate.rs  flex_gate.rs  general.rs  idx_to_indicator.rs  neg_prop.rs  pos_prop.rs  range_gate.rs  z3.rs
halo2-base/tests/common/: mod.rs  rand.rs  utils.rs
halo2-ecc/: Cargo.toml
halo2-ecc/.cargo/: config
halo2-ecc/benches/: README.md  fixed_base_msm.rs  fp_mul.rs  msm.rs
halo2-ecc/configs/bls12_381/: bench_ec_add.config  bench_hash_to_curve.config  bench_pairing.config  bls_signature_circuit.config  ec_add_circuit.config  hash_to_curve_circuit.config  pairing_circuit.config
halo2-ecc/configs/bn254/: bench_bls_signature.config  bench_fixed_msm.config  bench_fixed_msm.t.config  bench_msm.config  bench_msm.t.config  bench_pairing.config  bench_pairing.t.config  bls_signature_circuit.config  fixed_msm_circuit.config  msm_circuit.config  pairing_circuit.config
halo2-ecc/configs/secp256k1/: bench_ecdsa.config  bench_schnorr.config  scalar_multiplication.config
halo2-ecc/configs/secp256r1/: bench_ecdsa.t.config  ecdsa_circuit.config
halo2-ecc/params/: kzg_bn254_11.srs  kzg_bn254_12.srs  kzg_bn254_13.srs  kzg_bn254_14.srs
halo2-ecc/results/bls12_381/: pairing_bench.csv
halo2-ecc/results/bn254/: ec_add_bench.csv  fixed_msm_bench.csv  msm_bench.csv
halo2-ecc/results/secp256k1/: ecdsa_bench.csv
halo2-ecc/scripts/: build_wasm.sh
halo2-ecc/src/: lib.rs  main.rs  wasm.rs
halo2-ecc/src/bigint/: add_no_carry.rs  big_is_equal.rs  big_is_even.rs  big_is_zero.rs  big_less_than.rs  carry_mod.rs  check_carry_mod_to_zero.rs  check_carry_to_zero.rs  mod.rs  mul_no_carry.rs  negative.rs  scalar_mul_and_add_no_carry.rs  scalar_mul_no_carry.rs  select.rs  select_by_indicator.rs  sub.rs  sub_no_carry.rs  utils.rs
halo2-ecc/src/bls12_381/: bls_signature.rs  final_exp.rs  hash_to_curve.rs  mod.rs  notes.md  pairing.rs  utils.rs
halo2-ecc/src/bls12_381/tests/: bls_signature.rs  ec_add.rs  hash_to_curve.rs  mod.rs  pairing.rs
halo2-ecc/src/bn254/: bls_signature.rs  final_exp.rs  mod.rs  pairing.rs
halo2-ecc/src/bn254/configs/: bench_ec_add.config  bench_msm.config  ec_add_circuit.config  ec_add_circuit.tmp.config  fixed_msm_circuit.tmp.config  msm_circuit.config  pairing_circuit.tmp.config
halo2-ecc/src/bn254/results/: msm_bench_internal.csv  msm_bench_m2_simple.csv  msm_bench_m2_simple_plus.csv  pairing_bench_results.txt
halo2-ecc/src/bn254/tests/: bls_signature.rs  ec_add.rs  fixed_base_msm.rs  mod.rs  msm.rs  msm_sum_infinity.rs  msm_sum_infinity_fixed_base.rs  pairing.rs  sm_unsafe_scalars.rs
halo2-ecc/src/commitments/: kzg.rs  mod.rs  poly.rs
halo2-ecc/src/commitments/tests/: Polynomial.rs  dummy.rs  kzg.rs  mod.rs  utils.rs
halo2-ecc/src/commitments/utils/: blob.rs  mod.rs  polynomial.rs
halo2-ecc/src/ecc/: ecdsa.rs  fixed_base.rs  fixed_base_pippenger.rs  hash_to_curve.rs  inner_product_argument.rs  inner_product_proof.rs  mod.rs  pippenger.rs  schnorr_signature.rs  tests.rs
halo2-ecc/src/fields/: fp.rs  fp12.rs  fp2.rs  mod.rs  native_fp.rs  poly.rs  tests.rs  vector.rs
halo2-ecc/src/fields/tests/: mod.rs
halo2-ecc/src/grumpkin/: mod.rs
halo2-ecc/src/grumpkin/tests/: mod.rs
halo2-ecc/src/ipa/: inner_product_argument.rs  mod.rs
halo2-ecc/src/ipa/tests/: mod.rs
halo2-ecc/src/secp256k1/: ecdsa.rs  mod.rs  params.rs  util.rs
halo2-ecc/src/secp256k1/configs/: 11.config  12.config  13.config  14.config  15.config  16.config  17.config  18.config  ecdsa_circuit.config  ecdsa_circuit.tmp.config
halo2-ecc/src/secp256k1/hash_to_curve/: constants.rs  expand_message_xmd.rs  hash_to_field.rs  iso_map.rs  map_to_curve.rs  mod.rs  util.rs
halo2-ecc/src/secp256k1/results/: ecdsa_bench.csv  ecdsa_bench_m1.csv  ecdsa_bench_results.txt
halo2-ecc/src/secp256k1/sha256/: compression.rs  mod.rs  spread.rs
halo2-ecc/src/secp256k1/tests/: ecdsa.rs  ecdsa_tests.rs  inner_product_argument_test.rs  mod.rs  schnorr_signature.rs  (+2 more)
halo2-ecc/src/secp256r1/: mod.rs
hashes/poseidon/: Cargo.toml
hashes/poseidon/src/: lib.rs  tests.rs
hashes/zkevm/: Cargo.toml  README.md
hashes/zkevm-keccak/: Cargo.toml
hashes/zkevm-keccak/src/: control.rs  keccak_circuit.rs  keccak_f.rs  keccak_packed_multi.rs  keccak_table.rs  lib.rs  util.rs
hashes/zkevm/src/: keccak_packed_multi.rs  lib.rs
(+808 files in other folders)
