[package]
name="halo2-ecc"
version="0.4.0"
edition="2021"

[dependencies]
itertools="0.10"
num-bigint={ version="0.4", features=["rand"] }
num-integer="0.1"
num-traits="0.2"
rand_core={ version="0.6", default-features=false, features=["getrandom"] }
rand="0.8"
rand_chacha="0.3.1"
serde={ version="1.0", features=["derive"] }
serde_json="1.0"
rayon="1.6.1"
test-case="3.1.0"

halo2-base={ path="../halo2-base", default-features=false }
# Use additiona axiom-crypto halo2curves for BLS12-381 chips when feature = "halo2-pse" is on,
# because the PSE halo2curves does not support BLS12-381 chips and Halo2 depnds on lower major version so patchign it is not possible
halo2curves = { package = "halo2curves-axiom", version = "=0.4.2", optional=true }

[dev-dependencies]
ark-std={ version="0.3.0", features=["print-trace"] }
pprof={ version="0.11", features=["criterion", "flamegraph"] }
criterion="0.4"
criterion-macro="0.4"
halo2-base={ path="../halo2-base", default-features=false, features=["test-utils"] }
test-log="0.2.12"
env_logger="0.10.0"
pairing="0.23.0"
sha2="0.9"

[features]
default=["jemallocator", "halo2-axiom", "display"]
dev-graph=["halo2-base/dev-graph"]
display=["halo2-base/display"]
asm=["halo2-base/asm"]
halo2-pse=["halo2-base/halo2-pse", "halo2curves"]
halo2-axiom=["halo2-base/halo2-axiom"]
jemallocator=["halo2-base/jemallocator"]
mimalloc=["halo2-base/mimalloc"]

[[bench]]
name="fp_mul"
harness=false

[[bench]]
name="msm"
harness=false

[[bench]]
name="fixed_base_msm"
harness=false
