[package]
name = "zkevm-hashes"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
array-init = "2.0.0"
ethers-core = "2.0.8"
rand = "0.8"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
num-bigint = { version = "0.4" }
halo2-base = { path = "../../halo2-base", default-features = false, features = [
    "test-utils",
] }
rayon = "1.7"
sha3 = "0.10.8"
# always included but without features to use Native poseidon
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "develop", default-features = false }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "develop", default-features = false, optional = true }
getset = "0.1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.28", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
], optional = true }
field_names = "0.1"
reqwest = "0.11"
csv = "1.1"

[dev-dependencies]
criterion = "0.3"
ctor = "0.1.22"
ethers-signers = "2.0.8"
hex = "0.4.3"
itertools = "0.11"
pretty_assertions = "1.0.0"
rand_core = "0.6.4"
rand_xorshift = "0.3"
env_logger = "0.10"
test-case = "3.1.0"

[features]
default = ["halo2-axiom", "display", "aggregation"]
display = [
    "halo2-base/display",
    "snark-verifier/display",
    "snark-verifier-sdk?/display",
]
halo2-pse = ["halo2-base/halo2-pse", "snark-verifier/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom", "snark-verifier/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]
mimalloc = ["halo2-base/mimalloc"]
asm = ["halo2-base/asm"]
aggregation = ["snark-verifier/loader_halo2", "snark-verifier-sdk/loader_halo2"]
evm = ["aggregation", "snark-verifier-sdk/loader_evm"]
