[package]
name = "zkevm-hashes"
version = "0.2.1"
authors = ["Privacy Scaling Explorations Team", "Taiko Labs", "Intrinsic Technologies"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/axiom-crypto/halo2-lib"
readme = "README.md"
description = "Library of ZK gadgets for hash functions in halo2. This is Axiom's modification of the circuits in the zkEVM project."
rust-version = "1.73.0"

[dependencies]
array-init = "2.0.0"
ethers-core = "2.0.8"
rand = "0.8"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
num-bigint = { version = "0.4" }
halo2-base = { version = "=0.4.1", path = "../../halo2-base", default-features = false, features = ["test-utils"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
sha3 = "0.10.8"
# always included but without features to use Native poseidon and get CircuitExt trait
# snark-verifier = { version = "=0.1.7", default-features = false }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "release-0.1.7-rc", default-features = false }
getset = "0.1.2"
type-map = "0.5.0"

[dev-dependencies]
ethers-signers = "2.0.8"
hex = "0.4.3"
itertools = "0.11"
pretty_assertions = "1.0.0"
rand_core = "0.6.4"
rand_xorshift = "0.3"
env_logger = "0.10"
test-case = "3.1.0"

[features]
default = ["halo2-axiom", "display"]
display = ["snark-verifier-sdk/display"]
# halo2-pse = ["halo2-base/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]
mimalloc = ["halo2-base/mimalloc"]
asm = ["halo2-base/asm"]
